# HomeSecurity

./: README.md  home.py  logger.py  main.py  pyproject.toml  requirements.txt  security.db  test_logger.py  webapp.py
Wifi/: Captive-Wifi.ino
app/: __init__.py
app/database/: security.db
app/helpers/: door_monitor.py  mqtt_handler.py  sensor_values.py  state_vars.py  tg_alerts.py
app/logger/: home.py  logger.py
app/routes/: routes.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
schematic/diy_arduino_esp01/: diy_arduino_esp01.kicad_pcb  diy_arduino_esp01.kicad_prl  diy_arduino_esp01.kicad_pro  diy_arduino_esp01.kicad_sch
templates/: index.html
